--- a/content/resources/11-360f05-th.md
+++ b/content/resources/11-360f05-th.md
@@ -1,13 +1,15 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/11-360-community-growth-and-land-use-planning-fall-2005/eaa74de8ac14e9d0969c8c2fa91fedb1_11-360f05-th.jpg
+file: /media/courses/11-360-community-growth-and-land-use-planning-fall-2005/eaa74de8ac14e9d0969c8c2fa91fedb1_11-360f05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Aerial photo highlighting the Centralville neighborhood in Lowell, MA.
     (Image courtesy of MIT.)
   credit: ''
   image-alt: Aerial photograph with the Centralville neighborhood highlighted in pink.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 11-360f05-th.jpg
 uid: eaa74de8-ac14-e9d0-969c-8c2fa91fedb1
