--- a/content/resources/11-360f05.md
+++ b/content/resources/11-360f05.md
@@ -2,13 +2,15 @@
 content_type: resource
 description: Aerial photo highlighting the Centralville neighborhood in Lowell, MA.
   (Image courtesy of MIT.)
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/11-360-community-growth-and-land-use-planning-fall-2005/26ea51673e49273bab2b19286cc23499_11-360f05.jpg
+file: /media/courses/11-360-community-growth-and-land-use-planning-fall-2005/26ea51673e49273bab2b19286cc23499_11-360f05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Aerial photo highlighting the Centralville neighborhood in Lowell, MA.
     (Image courtesy of MIT.)
   credit: ''
   image-alt: Aerial photograph with the Centralville neighborhood highlighted in pink.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 11-360f05.jpg
 uid: 26ea5167-3e49-273b-ab2b-19286cc23499
