--- a/content/resources/11-360f05.md
+++ b/content/resources/11-360f05.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Aerial photograph with the Centralville neighborhood highlighted in pink.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-360f05.jpg
 uid: 26ea5167-3e49-273b-ab2b-19286cc23499
 ---
 Aerial photo highlighting the Centralville neighborhood in Lowell, MA. (Image courtesy of MIT.)
-
