--- a/content/resources/11-360f05.md
+++ b/content/resources/11-360f05.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Aerial photo highlighting the Centralville neighborhood in Lowell, MA.
   (Image courtesy of MIT.)
 file: /courses/11-360-community-growth-and-land-use-planning-fall-2005/26ea51673e49273bab2b19286cc23499_11-360f05.jpg
+file_size: 66381
 file_type: image/jpeg
 image_metadata:
   caption: Aerial photo highlighting the Centralville neighborhood in Lowell, MA.
